# aidevs4-task

./: .env-example  LICENSE  README-clear-repo.md  README-ngrok.md  README.md  main.py  prompts.md  pyproject.toml
.windsurf/rules/: base-rules.md
common/: HttpUtil.py  cache.py  logger_config.py  task_verifier.py
llmService/: __init__.py  agent_loop.py  completionService.py  openaiService.py  responses_service.py
tasks/: TestTask.py  base_task.py
tasks/S01E01/: AGENTS.md  S01E01.py  __init__.py  plan-impl.md
tasks/S01E02/: AGENTS.md  S01E02.py  __init__.py  plan-impl.md  tools.py
tasks/S01E03/: AGENTS.md  S01E03.py  __init__.py  plan-impl.md  proxy_server.py  tools.py
tests/http/: hub.http
